Quorum/Library/Tests/TypeChecker/Pass/ExpAssignNumObjNumObj.quorum
class Main
    action Main
        Number n
        Number num
        n:SetValue(7.5)
        num = cast(Number, n)
        if num:GetValue() = 7.5
            output "passed"
        end
    end
end