Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerNumObj.quorum
class Main
    action Main
        Number n
        integer int = 0
        n:SetValue(7.5)
        int = cast(integer, n)
    end
end